force-app/main/default/objects/Confirmation_Task__c/Confirmation_Task__c.object-meta.xml
<CustomObject>
    <description>Confirmation task to confirm the RSVP of the registered student.</description>
    <label>Confirmation Task</label>
    <nameField>
        <label>Confirmation Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confirmation Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>