force-app/main/default/objects/Confirmation_Task__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Confirmation Tasks</relationshipLabel>
    <relationshipName>Confirmation_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>