force-app/main/default/objects/Confirmation_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Maximum due date to the task.</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>