force-app/main/default/objects/Confirmation_Task__c/fields/Registration_Form__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Registration form from which the confirmation will be RVSP&apos;ed.</description>
    <label>Registration Form</label>
    <referenceTo>Registration_Form__c</referenceTo>
    <relationshipLabel>Confirmation Tasks</relationshipLabel>
    <relationshipName>Confirmation_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>