force-app/main/default/objects/Confirmation_Task__c/fields/RVSP__c.field-meta.xml
<CustomField>
    <fullName>RVSP__c</fullName>
    <description>RVSP of the student.</description>
    <label>RVSP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Not decided yet</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>