force-app/main/default/objects/Confirmation_Task__c/validationRules/Prevent_Confirmation_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Confirmation_Status_Change</fullName>
    <active>true</active>
    <description>Rule to prevent the change of the confirmation status</description>
    <errorConditionFormula>OR(ISPICKVAL(PRIORVALUE( RVSP__c ), &quot;Accepted&quot;), ISPICKVAL(PRIORVALUE(RVSP__c ), &quot;Declined&quot;)) &amp;&amp; OR(NOT(ISPICKVAL(RVSP__c , &quot;Accepted&quot;)), NOT(ISPICKVAL(RVSP__c , &quot;Declined&quot;)))</errorConditionFormula>
    <errorDisplayField>RVSP__c</errorDisplayField>
    <errorMessage>Sorry. You can&apos;t change RVSP when it has been set to a definitive status.</errorMessage>
</ValidationRule>